--- a/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_CmbPersona_Compras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_CmbPersona_Compras.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Comprador", Action = "_CmbPersona_Compras", Area = "Compras" };
+        settings.CallbackRouteValues = new { Controller = "Comprador", Action = "CmbPersona_Compras", Area = "Compras" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
