--- a/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/SeguridadAcceso/Views/Usuario/Nuevo.cshtml
@@ -9,6 +9,13 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
+
+<script>
+    $(function () {
+        $("#div_admin").hide();
+    })
+</script>
+
 @using (Html.BeginForm("Nuevo", "Usuario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (ViewBag.mensaje != null)
@@ -54,14 +61,32 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
 
             <div class="col-md-2">
                 <div class="form-group">
                     <div class="checkbox">
-                        <label for="">@Html.CheckBoxFor(q => q.ExigirDirectivaContrasenia) Exigir contraseña</label>
+                        <label for="es_super_admin">@Html.CheckBoxFor(q => q.es_super_admin, new { @id = "es_super_admin" }) ¿Es usuario Administrador?</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-10">
+                <div class="form-group" id="div_admin">
+                    <label for="contrasena_admin">Contraseña Administrador</label>
+                    @Html.PasswordFor(q => q.contrasena_admin, new { @class = "form-control", @id = "contrasena_admin" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+
+            <div class="col-md-2">
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label for="ExigirDirectivaContrasenia">@Html.CheckBoxFor(q => q.ExigirDirectivaContrasenia) Exigir contraseña</label>
                     </div>
                 </div>
             </div>
@@ -69,12 +94,13 @@
             <div class="col-md-10">
                 <div class="form-group">
                     <div class="checkbox">
-                        <label for="">@Html.CheckBoxFor(q => q.CambiarContraseniaSgtSesion) Cambiar contraseña el próximo inicio de sesión</label>
+                        <label for="CambiarContraseniaSgtSesion">@Html.CheckBoxFor(q => q.CambiarContraseniaSgtSesion) Cambiar contraseña el próximo inicio de sesión</label>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+   
 
     <div class="col-md-12">
         <table class="table table-bordered table-striped dataTable" role="grid">
@@ -121,3 +147,19 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
+<script>
+
+    $("#es_super_admin").change(function () {
+           
+        if ($("#es_super_admin").is(":checked")) {
+            $("#div_admin").show();
+        }else
+            $("#div_admin").hide();
+    });
+
+
+    $(function () {
+        $("#div_admin").hide();
+    })
+</script>
