--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
@@ -8,7 +8,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script>
 
+    function MostarPrecios() {
+        $("#contrasena_admin").val("");
+        $("#ModalMostrarPrecios").modal("show");
+    }
+
+</script>
 @using (Html.BeginForm("Modificar", "Producto", FormMethod.Post, new { @class = "form", @rolw = "form" }))
 {
 
@@ -118,6 +125,15 @@
                             <label for="Aparece_modu_Compras">@Html.CheckBoxFor(q => q.Aparece_modu_Compras, new { @id = "Aparece_modu_Compras" }) Compras</label>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+
+                    <button type="button" class="btn btn-primary" id="btn_desbloquear" onclick="MostarPrecios();">
+                        <i class="fa fa-lock"></i> Mostrar precios
+                    </button>
                 </div>
             </div>
         </div>
@@ -448,6 +464,35 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="ModalMostrarPrecios" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Ingrese la contraseña Administrador</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group has-feedback">
+                                @Html.PasswordFor(q => q.contrasena_admin, new { @class = "form-control", @placeholder = "Contraseña desbloqueo", @id = "contrasena_admin" })
+                                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <button type="button" class="btn btn-primary" onclick="MostrarPrecios();">Mostrar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
@@ -935,5 +980,35 @@
 
 
 
+    function MostrarPrecios() {
+        var datos = {
+            Contrasenia: $("#contrasena_admin").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("MostrarPrecios", "Producto",new { Area = "Inventario"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data == "AUTORIZADO") {
+                    $("#link_imagen").hide();
+                    $("#link_general").click();
+                }
+                else
+                {
+                    $("#link_imagen").show();
+                    $("#link_general").click();
+                }
+               
+            },
+            error: function (error) {
+            }
+        });
+        $("#ModalMostrarPrecios").modal("hide");
+    }
 
 </script>
