--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
@@ -995,12 +995,12 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 if (data == "AUTORIZADO") {
-                    $("#link_imagen").hide();
+                    $("#link_precios").hide();
                     $("#link_general").click();
                 }
                 else
                 {
-                    $("#link_imagen").show();
+                    $("#link_precios").show();
                     $("#link_general").click();
                 }
                
